--- a/com.sap.lys/webapp/view/Launcher.view.xml
+++ b/com.sap.lys/webapp/view/Launcher.view.xml
@@ -1,16 +1,16 @@
-<mvc:View 
-    xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" 
-    xmlns="sap.m" 
-    controllerName="com.sap.lys.controller.Launcher"
-	xmlns:html="http://www.w3.org/1999/xhtml">
+<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:html="http://www.w3.org/1999/xhtml" controllerName="com.sap.lys.controller.Launcher">
 	
 	<App id="idAppControl">
 		<pages>
 			<Page title="Title">
-			<content>
-				        <GenericTile header="Header" subheader="Sub Header" id="tile4" press="onShowThings"/>
-				        <GenericTile header="Header" subheader="Sub Header" id="tile6"/>
-				        <GenericTile header="Header" subheader="Sub Header" id="tile5"/>
+			
+				<content>
+			        <HBox width="100%" id="hbox0">
+			        
+			        </HBox>
+			        <GenericTile header="Header" subheader="Sub Header" id="tile4" press="onShowThings"/>
+			        <GenericTile header="Header" subheader="Sub Header" id="tile6"/>
+			        <GenericTile header="Header" subheader="Sub Header" id="tile5"/>
 				</content>
 			</Page>
 		</pages>
