--- a/com.sap.lys/webapp/view/Launcher.view.xml
+++ b/com.sap.lys/webapp/view/Launcher.view.xml
@@ -2,15 +2,21 @@
 	
 	<App id="idAppControl">
 		<pages>
-			<Page title="Title">
-			
+			<Page id="launcherPage" class="launcherPage" showHeader="false">
 				<content>
-			        <HBox width="100%" id="hbox0">
-			        
-			        </HBox>
-			        <GenericTile header="Header" subheader="Sub Header" id="tile4" press="onShowThings"/>
-			        <GenericTile header="Header" subheader="Sub Header" id="tile6"/>
-			        <GenericTile header="Header" subheader="Sub Header" id="tile5"/>
+ 
+					<html:div class="launchHeader">
+						<html:img src="./images/bulb.png"></html:img>
+						<html:div>
+							<html:h1>LYS</html:h1>						
+							<html:h2>sustainable and economical</html:h2>		
+						</html:div>
+					</html:div>
+
+	         	    <GenericTile header="Work Queue" subheader="open issues to solve" class="tile1 tile" press="onShowThings"/>
+			        <GenericTile header="Locations"  subheader="sensor overview"      class="tile2 tile" press="onShowMap"/>
+			        <GenericTile header="Test"       subheader="test a sensor"        class="tile3 tile"/>
+
 				</content>
 			</Page>
 		</pages>
