--- a/com.sap.lys/webapp/view/Main.view.xml
+++ b/com.sap.lys/webapp/view/Main.view.xml
@@ -8,6 +8,7 @@
 	displayBlock="true">
 
 	<Page 
+		class="mainPage" 
 		showNavButton="true"
 		navButtonPress="onNavBack"
 		title="LYS - Work Queue" 
@@ -16,7 +17,6 @@
 		<content>
 			<List class="sapContrast sapContrastPlus" items="{path: '/Things', templateShareable : 'true'}">
 					<items>
-
 						<NotificationListItem
 								title="{ThingName}"
 								description="{ThingType}"
@@ -24,25 +24,11 @@
 								datetime="1 hour"
 								unread="true"
 								priority="None"
-								press="onListItemPress"
-								authorPicture="sap-icon://car-rental"/>
+								press="onListItemPressed"
+								authorPicture="sap-icon://lightbulb"/>
 					</items>
 			</List>
 			
-			
-		    <iot:IoTThingList things="{path:'/Things',parameters:{expand:'DYN_ENT_com_sap_appiot_eventtypes__StandardEventType'}}" id="list0" thingListMode="None">
-		        <iot:columns>
-		            <iotele:IoTThingListColumnHeader text="Thing Id" id="header0"/>
-		            <iotele:IoTThingListColumnHeader text="Thing Name" id="header1"/>
-		            <iotele:IoTThingListColumnHeader text="Thing Type" id="header2"/></iot:columns>
-		        <iot:things>
-		            <iotele:IoTThingListElement thingImage="{ThingId}" highSeverity="{DYN_ENT_com_sap_appiot_eventtypes__StandardEventType/High}" mediumSeverity="{DYN_ENT_com_sap_appiot_eventtypes__StandardEventType/Medium}" lowSeverity="{DYN_ENT_com_sap_appiot_eventtypes__StandardEventType/Low}" id="element0" itemPress="action" action:wiring="\{'itemPress':\{'navigation':\{'routeName':'Detail_binded','keys':[\{'name':'ThingId','type':'Edm.String'\}]\}\}\}">
-		                <iotele:cells>
-		                    <iotele:IoTThingListColumn text="{ThingId}"   id="column0"/>
-		                    <iotele:IoTThingListColumn text="{ThingName}" id="column1"/>
-		                    <iotele:IoTThingListColumn text="{ThingType}" id="column2"/></iotele:cells>
-		            </iotele:IoTThingListElement>
-		        </iot:things></iot:IoTThingList>
 		</content>
 	</Page>
 
