--- a/com.sap.lys/webapp/view/Detail.view.xml
+++ b/com.sap.lys/webapp/view/Detail.view.xml
@@ -16,28 +16,29 @@
  		
 		<content>
 
- 
-					<html:div class="launchHeader">
-					    <html:img src="./images/replace.svg" />
-						<html:div>
-							<Title text="{ThingDescription}" level="H1"/>		
-							<html:h2>Maintenance Screen for IoT Devices</html:h2>		
-						</html:div>
-					</html:div>
-					
-	<Panel width="auto" class="sapUiResponsiveMargin">
-		<headerToolbar>
-			<Toolbar height="3rem">
-				<Title text="Header"/>
-				<ToolbarSpacer />
-				<Button icon="sap-icon://settings" />
-				<Button icon="sap-icon://drop-down-list" />
-			</Toolbar>
-		</headerToolbar>
-		<content>
-			<Text text="Lorem ipsum dolor st amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat" />
-		</content>
-	</Panel>
+
+			<html:div class="launchHeader">
+			    <html:img src="./images/replace.svg" class="icon" />
+				<html:div>
+					<Title text="{ThingDescription}" level="H1"/>		
+					<html:h2>Maintenance Screen for IoT Devices</html:h2>		
+				</html:div>
+			</html:div>
+			
+			<Panel width="auto" class="sapUiResponsiveMargin">
+				<headerToolbar>
+					<Toolbar height="3rem">
+						<Title text="Header"/>
+						<ToolbarSpacer />
+						<Button icon="sap-icon://settings" />
+						<Button icon="sap-icon://drop-down-list" />
+					</Toolbar>
+				</headerToolbar>
+				<content>
+					<Text text="Lorem ipsum dolor st amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat" />
+				</content>
+			</Panel>
+			
 			<!-- https://sapui5.hana.ondemand.com/#/sample/sap.m.sample.StandardMarginsAll/code -->
 			<Panel width="auto" class="sapUiMediumMargin">
 				<Title level="H3" text="Products" />
