--- a/com.sap.lys/webapp/css/style.css
+++ b/com.sap.lys/webapp/css/style.css
@@ -101,10 +101,22 @@ body, h1, h2, h1 > span, h2 > span{
 	padding-top: 0px;
 }
 
+.slogan {
+    margin: 25px;
+    color: white;
+    text-shadow: none;
+    font-weight: 100;
+    font-size: 2.5vw;
+    line-height: 0.7em;
+    background: rgba(0,0,0,0.5);
+    padding: 20px;
+}
+
+
 .testPage{
-background: #E0EAFC;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: #E0EAFC;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .detailPage {
