--- a/com.sap.lys/webapp/css/style.css
+++ b/com.sap.lys/webapp/css/style.css
@@ -49,7 +49,7 @@ body, h1, h2, h1 > span, h2 > span{
 .launchHeader {
 	height:140px;
 	background: #253b5b;
-	display:block;
+	display:flex;
 	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 	border-bottom: 1px solid #EE6E73;
 }
